src/test/ui/generic-associated-types/bugs/issue-89008.stderr
error[E0271]: type mismatch resolving `<Empty<_> as Stream>::Item == Repr`
  --> $DIR/issue-89008.rs:38:43
   |
LL |     fn line_stream<'a, Repr>(&'a self) -> Self::LineStreamFut<'a, Repr> {
   |                        ----               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ type mismatch resolving `<Empty<_> as Stream>::Item == Repr`
   |                        |
   |                        this type parameter
   |
note: expected this to be `()`
  --> $DIR/issue-89008.rs:17:17
   |
LL |     type Item = ();
   |                 ^^
   = note:   expected unit type `()`
           found type parameter `Repr`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0271`.
